# MLOps

./: .gitignore  Archivo1.py  Datos.md  Modelos.md  README.md  dvc.yaml  integrantes.md  params.yaml  pyproject.toml
.dvc/: config
evidence/: mlflow_runs.json  model_comparison.json
scripts/: patch_mlflow_py314.py
src/: export_mlflow_evidence.py  generate_data.py  prepare_data.py  train.py  train_all.py
tests/: test_pipeline_contracts.py
