[project]
name = "proyecto-git"
version = "0.1.0"
description = "Pipeline de generacion y preparacion de datos para clasificacion."
authors = [
    {name = "Luis Jimenez", email = "luisanto_3112@hotmail.es"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas (==2.3.3)",
    "dvc (>=3.67.1,<4.0.0)",
    "scikit-learn (>=1.9.0,<2.0.0)",
    "numpy (>=2.5.0,<3.0.0)",
    "pyyaml (>=6.0,<7.0)"
]

[tool.poetry]
packages = [{ include = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
